--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^3.0.7",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.7"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
