--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcrypt": "^3.0.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.8.7"
+    "mongoose": "^5.8.7",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
