--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.7",
+    "react-bootstrap": "^0.33.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.0"
