--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.7"
+    "mongoose": "^5.8.7",
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
-    "if-env": "^1.0.4",
     "nodemon": "^2.0.2"
   }
 }
